--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-runtime": "^6.3.19",
     "react": "^0.14.5",
     "react-dom": "^0.14.5",
+    "serve-favicon": "^2.3.0",
     "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
